@@ -1,3 +1,8 @@
+2017-03-02  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/79514
+	* gcc.target/i386/pr79514.c: New test.
+
 2017-03-01  Pat Haugen  <pthaugen@us.ibm.com>
 
 	Backport from mainline:
